# mnemosyne

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: mnemosyne.yml
docs/: modern.md
examples/: introspection_demo.py  society_debate.py
mnemosyne/: __init__.py
mnemosyne/agents/: base.py  specialists.py
mnemosyne/arch/: tokenizer.py  transformer.py
mnemosyne/causal/: interventions.py
mnemosyne/cli/: main.py
mnemosyne/communication/: channel.py
mnemosyne/eval/: benchmark.py
mnemosyne/interp/: sae.py
mnemosyne/memory/: hierarchical.py
mnemosyne/self_model/: introspect.py
mnemosyne/society/: orchestrator.py
mnemosyne/training/: tasks.py  trainer.py
tests/: test_mnemosyne.py
