[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemosyne"
version = "0.1.0"
description = "A society of causally-self-modeling agents"
requires-python = ">=3.10"
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0", "ruff>=0.5"]
viz = ["matplotlib>=3.5"]

[project.scripts]
mnemosyne = "mnemosyne.cli.main:main"

[tool.setuptools.packages.find]
include = ["mnemosyne*"]
